--- a/App04_web/appsettings.json
+++ b/App04_web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=Newsfeed; Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Newsfeed;Trusted_Connection=True;MultipleActiveresultSets=true;"
     
   },
   "Logging": {
